--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -18,7 +18,9 @@
 
 // 5. Components
 @import
-  'components/app';
+  'components/board',
+  'components/card',
+  'components/column';
 
 // 6. Page-specific styles
 
