--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -1,6 +1,13 @@
+html {
+  // Set 1rem = 10px
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
+  font-size: 1.5rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,9 +18,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-html {
-  // Set 1rem = 10px
-  font-size: 62.5%;
 }
